exports[`test a disabled toggle that is enabled 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="cIZrtJ" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    Off
  </span>
</div>
`;

exports[`test a disabled toggle that is enabled 2`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="hGsRJU"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="lbeQtx" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    On
  </span>
</div>
`;

exports[`test a disabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="bNikmV" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    Off
  </span>
</div>
`;

exports[`test an enabled toggle that is disabled 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="hGsRJU"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="lbeQtx" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    On
  </span>
</div>
`;

exports[`test an enabled toggle that is disabled 2`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="cIZrtJ" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    Off
  </span>
</div>
`;

exports[`test an enabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="hGsRJU"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="lbeQtx" />
  </div>
  <span
    aria-hidden="true"
    className="iUAAtI">
    On
  </span>
</div>
`;
